update tertiary foreground to resolve contrast issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
     --secondary-foreground: 0 0% 100%;
 
     /* Warm Grey */
-    --tertiary-foreground: 51 3% 57%;
+    --tertiary-foreground: 240 5% 34%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
